chore: improving docker + remove unusuless comments + add healthcheck route

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "benefits-api",
+  "name": "edoo-nodejs",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Leu Almeida <leo@webid.net.br>",
