--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,26 @@
-version: '1.0'
-
 services:
-  edoo-nodejs:
-    build: .
-    volumes:
-      - .:/home/node/app
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: edoo-nodejs
     ports:
-      - 3000:3000
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
+      - PORT=3000
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 5s
+    restart: unless-stopped
+    volumes:
+      - ./database.sqlite:/app/database.sqlite
+    networks:
+      - benefits-network
+
+networks:
+  benefits-network:
+    driver: bridge
