--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   api:
     build:
@@ -6,9 +8,10 @@ services:
     container_name: edoo-nodejs
     ports:
       - "3000:3000"
+    volumes:
+      - sqlite_data:/app/data
     environment:
       - NODE_ENV=production
-      - PORT=3000
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
@@ -16,15 +19,7 @@ services:
       retries: 3
       start_period: 5s
     restart: unless-stopped
-    volumes:
-      - sqlite_data:/app/data
-    networks:
-      - benefits-network
 
 volumes:
   sqlite_data:
-    driver: local
-
-networks:
-  benefits-network:
-    driver: bridge
+    name: edoo_sqlite_data
