--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edoo-nodejs",
+  "name": "benefits-api",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Leu Almeida <leo@webid.net.br>",
@@ -13,13 +13,14 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -27,6 +28,8 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.25",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.17.0",
