--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
+    "prom-client": "^15.1.3",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
